# Parallel-Programing

./: .gitignore  CMakeLists.txt  for_lab_3.cpp  report.docx
python_files/: check_answer.py  matrix_generation.py  statistics.py
source/: main.cpp  matrix_mult.cpp  matrix_mult.hpp  other.cpp  other.hpp
stats/Lab_1/: interval.txt  stats.csv
stats/Lab_2/: interval.txt  report_lab_2.docx  stats.csv
stats/Lab_3/: create_matrix.cpp  interval.txt  process_mult.cpp  report_lab_3.docx  stats.csv
